# cor-proof-py

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE.md  NOTICE.md  README.md  RELEASING.md  TESTPYPI_UPLOAD_INSTRUCTIONS.md  pyproject.toml
.github/workflows/: python-package.yml
examples/invalid/: l1_empty_evidence.json  l1_missing_required_fields.json
examples/valid/: l1_basic_claim.json
src/cor_proof/: __init__.py  cli.py  validate.py
src/cor_proof/schema/: __init__.py  cor-proof.schema.json
tests/: conftest.py  test_cli.py  test_schema.py  test_validate.py
